src/App.css
:root {
  --color-blue: #004AAD;
  --color-green: #097f1b;
  --color-grey: #b1aeae;
  --color-blue-1: #569FFF;
  --color-blue-2: #D8E9FF;
  --color-blue-3: #A4CBFF;
  --landing-window-bg: url('./assets/waves-background.svg');
  --body-bg: linear-gradient(180deg, #ffffff 0%, #f4f4f4 100%);
  --border: 1px solid #ddd;
  --border-blue: 1px solid #579ffb;
  --border-green: 1px solid #097f1b;
  --left-bubble-bg: linear-gradient(0deg, #f0f0f0, #f4f4f4);
  --right-bubble-bg: linear-gradient(0deg, #3789f6, #579ffb);
  --chat-header-height: 9vh;
  --chat-window-height: 82vh;
  --input-area-height: 9vh;
  --landing-window-height: 100vh;
  --landing-footer-height: 5vh;
  --box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

html {
  box-sizing: border-box;
}

/* Ensure consistent layout. Resets margin and padding of all elements to zero and sets the box-sizing is inherited from their parent elements. */
*,
*:before,
*:after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Helvetica, sans-serif;
}

/* App */

.app {
  width: 100vw;
  height: 100vh;
}

.app-logo {
  max-width: 5%;
  max-height: auto;
}

.app-logo-banner {
  max-width: 20%;
  max-height: auto;
}

/* Buttons */

.app-btn {
  min-width: 50px;
  width: 150px;
  height: 50px;
  line-height: 50px;
  font-size: 16px;
  font-weight: 500;
  text-align: center;
  border: none;
  border-radius: 5px;
  border: var(--border);
  background-color: #ffffff;
}

.app-btn .icon,
.fa-paper-plane {
  max-width: 50%;
  transition: 0.4s ease;
}

.app-btn:hover {
  border: var(--border-blue);
}

.app-btn:hover .icon {
  margin-left: 20px;
}

.app-btn:hover .icon,
.app-btn:hover .fa-paper-plane {
  color: var(--color-blue);
}

.app-btn:hover .google {
  color: var(--color-green);
}

.app-btn:hover .facebook {
  color: var(--color-blue);
}

.app-btn:has(.google):hover {
  border: var(--border-green);
}

.app-btn:has(.facebook):hover {
  border: var(--border-blue);
}

/* Landing / Sign In */

.landing-window {
  width: 100vw;
  height: var(--landing-window-height);
  display: flex;
  flex-direction: column;
  background-image: var(--landing-window-bg);
  background-size: cover;

  img {
    margin: 20px;
  }

  .auth-providers {
    justify-self: flex-end;
    align-self: center;

    button {
      width: 250px;
    }
  }

  .auth-providers button:first-child {
    margin-right: 20px;
  }

  .app-content {
    align-self: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 6% 5% 3% 5%;
    /* margin: top right bottom left */

    .heading {
      text-align: center;
      font-size: 50px;
      font-weight: 400;
      margin-bottom: 10px;
      min-height: 150px;
    }

    .heading span {
      color: var(--color-blue);
    }

    .desc {
      text-align: center;
      font-size: 18px;
    }

    .desc span:last-child {
      color: var(--color-blue);
    }
  }
}

.landing-footer {
  width: 100vw;
  height: var(--landing-footer-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  font-size: 12px;
  color: var(--color-blue-2);
  padding: 0 20px;
  position: fixed;
  bottom: 0;

  span::before {
    content: "\00A0 \00A9 \00A0" attr(data-date) " ";
  }

  a:not(:first-child):before {
    content: "\00B7";
    margin: 0 10px;
  }

  a:link,
  a:active,
  a:visited {
    text-decoration: none;
    color: var(--color-blue-2);
  }

  a:hover {
    color: var(--color-blue);
  }
}

/* For Desktop View */
@media screen and (min-width: 1024px) {

  .app-logo-banner {
    max-width: 200px;
  }

}

/* For Tablet View */
@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
  .app-logo {
    width: 15%;
  }

  .app-logo-banner {
    max-width: 200px;
  }

  .landing-window {

    .app-content {
      width: 70vw;
    }
  }
}

/* For Mobile Portrait View */
@media screen and (max-device-width: 480px) and (orientation: portrait) {
  .app-logo {
    max-width: 15%;
  }

  .app-logo-banner {
    max-width: 165px;
  }

  .app-btn {
    min-width: 50px;
    width: 400px;
  }

  .landing-window {

    img {
      align-self: center;
      margin: 10px 0;
    }

    .app-content {
      width: 80vw;
      margin: 0;

      .heading {
        font-size: 30px;
        text-align: center;
        margin-bottom: 20px;
        min-height: 210px;
      }

      .desc {
        margin-bottom: 20px;
        text-align: center;
      }
    }

    .auth-providers {
      display: flex;
      flex-direction: column;

      button {
        width: 300px;
      }

      button:first-child {
        margin-bottom: 10px;
        margin-right: 0;
      }
    }
  }
}

/* For Mobile Landscape View */
@media screen and (max-device-width: 640px) and (orientation: landscape) {}

/* For Mobile Phones Portrait or Landscape View */
@media screen and (max-device-width: 640px) {

  .app-logo {
    max-width: 15%;
  }

  .app-logo-banner {
    max-width: 165px;
  }

  .app-btn {
    min-width: 50px;
    width: 400px;
  }

  .landing-window {

    img {
      align-self: center;
      margin: 20px 0;
    }

    .app-content {
      width: 80vw;
      margin: 0;

      .heading {
        font-size: 30px;
        text-align: center;
        margin-bottom: 20px;
        min-height: 210px;
      }

      .desc {
        margin-bottom: 20px;
        text-align: center;
      }
    }

    .auth-providers {
      display: flex;
      flex-direction: column;

      button {
        width: 300px;
      }

      button:first-child {
        margin-bottom: 10px;
        margin-right: 0;
      }
    }
  }

}

/* For iPhone 4 Portrait or Landscape View */
@media screen and (min-device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {}

/* For iPhone 5 Portrait or Landscape View */
@media (device-height: 568px) and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {}

/* For iPhone 6 and 6 plus Portrait or Landscape View */
@media (min-device-height: 667px) and (min-device-width: 375px) and (-webkit-min-device-pixel-ratio: 3) {}

